# halo2-wasm-demo

./: Cargo.toml  LICENSE.md  README.md
circuits/: Cargo.toml  README.md
circuits/.cargo/: config.toml
circuits/src/: circuit_2.rs  lib.rs  main.rs  wasm.rs
circuits/src/circuits/: circuits.rs
circuits/src/circuits/circuits/: circuit_1.rs  circuit_2.rs
circuits/src/circuits/circuits/chips/: cube_chip.rs  square_chip.rs
react_app/: README.md  package.json
react_app/public/pkg/: README.md  circuits.d.ts  circuits.js  circuits_bg.wasm  circuits_bg.wasm.d.ts  package.json
react_app/src/: App.tsx  halo-worker.ts
react_app/src/components/: index.js
src/: chips.rs  circuit_1.rs  circuit_2.rs  lib.rs  main.rs  square.rs
src/chips/: cube_chip.rs  square_chip.rs
src/square/: square_chip.rs  square_circuit.rs
test-client/: README.md  package.json
test-client/src/: App.tsx  halo-worker.ts
